@@ -30,8 +30,8 @@
 #include "tao/AnyTypeCode/TypeCode_Constants.h"
 #include "tao/AnyTypeCode/Alias_TypeCode_Static.h"
 #include "tao/AnyTypeCode/Sequence_TypeCode_Static.h"
-#include "tao/CDR.h"
 #include "tao/AnyTypeCode/Any.h"
+#include "tao/CDR.h"
 #include "tao/AnyTypeCode/Any_Dual_Impl_T.h"
 
 // TAO_IDL - Generated from
@@ -52,7 +52,7 @@ namespace TAO
     TAO::TypeCode::Sequence< ::CORBA::TypeCode_ptr const *,
                             TAO::Null_RefCount_Policy>
       CORBA_WCharSeq_0 (
-        CORBA::tk_sequence,
+        ::CORBA::tk_sequence,
         &CORBA::_tc_wchar,
         0U);
       
@@ -66,10 +66,10 @@ namespace TAO
 #endif /* _TAO_TYPECODE_CORBA_WCharSeq_GUARD */
 
 static TAO::TypeCode::Alias<char const *,
-                            CORBA::TypeCode_ptr const *,
+                            ::CORBA::TypeCode_ptr const *,
                             TAO::Null_RefCount_Policy>
   _tao_tc_CORBA_WCharSeq (
-    CORBA::tk_alias,
+    ::CORBA::tk_alias,
     "IDL:omg.org/CORBA/WCharSeq:1.0",
     "WCharSeq",
     &TAO::TypeCode::tc_CORBA_WCharSeq_0);
@@ -88,7 +88,7 @@ namespace CORBA
 
 // Copying insertion.
 void operator<<= (
-    CORBA::Any &_tao_any,
+    ::CORBA::Any &_tao_any,
     const CORBA::WCharSeq &_tao_elem
   )
 {
@@ -102,7 +102,7 @@ void operator<<= (
 
 // Non-copying insertion.
 void operator<<= (
-    CORBA::Any &_tao_any,
+    ::CORBA::Any &_tao_any,
     CORBA::WCharSeq *_tao_elem
   )
 {
@@ -115,8 +115,8 @@ void operator<<= (
 }
 
 // Extraction to non-const pointer (deprecated).
-CORBA::Boolean operator>>= (
-    const CORBA::Any &_tao_any,
+::CORBA::Boolean operator>>= (
+    const ::CORBA::Any &_tao_any,
     CORBA::WCharSeq *&_tao_elem
   )
 {
@@ -127,8 +127,8 @@ CORBA::Boolean operator>>= (
 }
 
 // Extraction to const pointer.
-CORBA::Boolean operator>>= (
-    const CORBA::Any &_tao_any,
+::CORBA::Boolean operator>>= (
+    const ::CORBA::Any &_tao_any,
     const CORBA::WCharSeq *&_tao_elem
   )
 {
