@@ -31,8 +31,8 @@
 #include "tao/AnyTypeCode/Alias_TypeCode_Static.h"
 #include "tao/AnyTypeCode/Sequence_TypeCode_Static.h"
 #include "tao/AnyTypeCode/String_TypeCode_Static.h"
-#include "tao/CDR.h"
 #include "tao/AnyTypeCode/Any.h"
+#include "tao/CDR.h"
 #include "tao/AnyTypeCode/Any_Dual_Impl_T.h"
 
 // TAO_IDL - Generated from
@@ -53,7 +53,7 @@ namespace TAO
     TAO::TypeCode::Sequence< ::CORBA::TypeCode_ptr const *,
                             TAO::Null_RefCount_Policy>
       CORBA_WStringSeq_0 (
-        CORBA::tk_sequence,
+        ::CORBA::tk_sequence,
         &CORBA::_tc_wstring,
         0U);
       
@@ -67,10 +67,10 @@ namespace TAO
 #endif /* _TAO_TYPECODE_CORBA_WStringSeq_GUARD */
 
 static TAO::TypeCode::Alias<char const *,
-                            CORBA::TypeCode_ptr const *,
+                            ::CORBA::TypeCode_ptr const *,
                             TAO::Null_RefCount_Policy>
   _tao_tc_CORBA_WStringSeq (
-    CORBA::tk_alias,
+    ::CORBA::tk_alias,
     "IDL:omg.org/CORBA/WStringSeq:1.0",
     "WStringSeq",
     &TAO::TypeCode::tc_CORBA_WStringSeq_0);
@@ -89,7 +89,7 @@ namespace CORBA
 
 // Copying insertion.
 void operator<<= (
-    CORBA::Any &_tao_any,
+    ::CORBA::Any &_tao_any,
     const CORBA::WStringSeq &_tao_elem
   )
 {
@@ -103,7 +103,7 @@ void operator<<= (
 
 // Non-copying insertion.
 void operator<<= (
-    CORBA::Any &_tao_any,
+    ::CORBA::Any &_tao_any,
     CORBA::WStringSeq *_tao_elem
   )
 {
@@ -116,8 +116,8 @@ void operator<<= (
 }
 
 // Extraction to non-const pointer (deprecated).
-CORBA::Boolean operator>>= (
-    const CORBA::Any &_tao_any,
+::CORBA::Boolean operator>>= (
+    const ::CORBA::Any &_tao_any,
     CORBA::WStringSeq *&_tao_elem
   )
 {
@@ -128,8 +128,8 @@ CORBA::Boolean operator>>= (
 }
 
 // Extraction to const pointer.
-CORBA::Boolean operator>>= (
-    const CORBA::Any &_tao_any,
+::CORBA::Boolean operator>>= (
+    const ::CORBA::Any &_tao_any,
     const CORBA::WStringSeq *&_tao_elem
   )
 {
