@@ -2,21 +2,21 @@
 //
 // $Id$
 
-// ================================================================
 /**
- * This file was used to generate the code in WCharSeq*.*
- * The command used to generate code is:
+ *   This file was used to generate the code in WCharSeqC.*
+ *   The command used to generate code is:
  *
  *     tao_idl
- *        -o orig -Ge 1 -Sc -GA -SS -Sci
+ *          -oA AnyTypeCode
+ *          -Ge 1 -GA -Sc -SS -Sci
+ *          -Wb,pre_include=ace/pre.h
+ *          -Wb,post_include=ace/post.h
  *          -Wb,export_macro=TAO_Export
- *          -Wb,export_include=TAO_Export.h
- *          -Wb,pre_include="ace/pre.h"
- *          -Wb,post_include="ace/post.h"
+ *          -Wb,export_include=tao/TAO_Export.h
+ *          -Wb,anyop_export_macro=TAO_AnyTypeCode_Export
+ *          -Wb,anyop_export_include=tao/AnyTypeCode/TAO_AnyTypeCode_Export.h
  *          WCharSeq.pidl
- *
  */
-// ================================================================
 
 #ifndef TAO_CORBA_WCHAR_SEQ_IDL
 #define TAO_CORBA_WCHAR_SEQ_IDL
