@@ -2,22 +2,21 @@
 //
 // $Id$
 
-// ================================================================
-//
-//   This file was used to generate the code in WStringSeqC.*
-//   The command used to generate code is:
-//
-//     tao_idl
-//       -o orig -Ge 1 -GA -Sc -SS -Sci
-//          -Wb,export_macro=TAO_Export
-//          -Wb,pre_include="ace/pre.h"
-//          -Wb,post_include="ace/post.h"
-//          WStringSeq.pidl
-//
-//   Patches for changes to the generated code are available in the
-//   `diffs' directory.
-// ================================================================
-
+/**
+ *   This file was used to generate the code in WStringSeqC.*
+ *   The command used to generate code is:
+ *
+ *     tao_idl
+ *          -oA AnyTypeCode
+ *          -Ge 1 -GA -Sc -SS -Sci
+ *          -Wb,pre_include=ace/pre.h
+ *          -Wb,post_include=ace/post.h
+ *          -Wb,export_macro=TAO_Export
+ *          -Wb,export_include=tao/TAO_Export.h
+ *          -Wb,anyop_export_macro=TAO_AnyTypeCode_Export
+ *          -Wb,anyop_export_include=tao/AnyTypeCode/TAO_AnyTypeCode_Export.h
+ *          WStringSeq.pidl
+ */
 
 #ifndef TAO_CORBA_WSTRING_SEQ_IDL
 #define TAO_CORBA_WSTRING_SEQ_IDL
